--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,8 @@ body{
     background: #005AA7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #FFFDE4, #005AA7);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #FFFDE4, #005AA7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    height: 100vh;
+    overflow: auto;
 }
 h4{
     color: #005AA7;
@@ -11,8 +12,11 @@ h4{
     background-color: #1f1fd6;  /* fallback for old browsers */
 background-color: -webkit-linear-gradient(to right, #1CB5E0, #5c5cdd);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-height: 250px;
+/* height: 250px; */
+height: 70%;
 }
 #chat-area{
     background-color: antiquewhite;
+    
+   
 }
